@@ -23,30 +23,9 @@ import java.util.ArrayList;
 import java.util.List;
 
 @Component
-/**
- 125 - Comment complaint
- 3776 - Complex complaint
- 6204 - Forcing convert to stream to list complaint
- 1141 - Nested complaint
-  1118 - Private constructor complaint
- 1186 - Add nested comment for empty constructor complaint
- 6809 - Calling transactional method with This. complaint
- 2139 - exception rethrow complain
- 3740 - parametrized  type for generic complaint
- 1149 - replacing HashTable complaint
- 112 - throwing dedicate exception complaint
- 107 - max parameter complaint
- 1195 - duplicate complaint
- 1135 - Todos complaint
- 6201 - instanceof check
- 1192 - duplicate literal
- 135 - for loop
- 117 - naming
- */
-@SuppressWarnings({"java:S125", "java:S3776", "java:S6204", "java:S1141", "java:S1118", "java:S1186", "java:S6809", "java:S6541", "java:S2139", "java:S3740",
-        "java:S1149", "java:S112", "java:S107", "java:S1195", "java:S1135", "java:S6201", "java:S1192", "java:S135", "java:S117"})
+
 public class HL7SpecimenUtil {
-    private static final Logger logger = LoggerFactory.getLogger(HL7SpecimenUtil.class);
+    private static final Logger logger = LoggerFactory.getLogger(HL7SpecimenUtil.class); //NOSONAR
     private final NBSObjectConverter nbsObjectConverter;
 
     public HL7SpecimenUtil(NBSObjectConverter nbsObjectConverter) {
@@ -65,7 +44,7 @@ public class HL7SpecimenUtil {
                 if(hl7SPECIMENTypeArray.size()>1) {
                     edxLabInformationDto.setMultipleSpecimen(true);
                 }
-                HL7SPECIMENType hl7SPECIMENType = hl7SPECIMENTypeArray.get(0);
+                HL7SPECIMENType hl7SPECIMENType = hl7SPECIMENTypeArray.getFirst();
                 if(hl7SPECIMENType!=null && hl7SPECIMENType.getSPECIMEN()!=null){
                     HL7SPMType hl7SPMType  =hl7SPECIMENType.getSPECIMEN();
                     MaterialContainer materialContainer = new MaterialContainer();
@@ -86,7 +65,7 @@ public class HL7SpecimenUtil {
 
                     List<String> specimenDec = hl7SPMType.getSpecimenDescription();
                     if (specimenDec!=null && !specimenDec.isEmpty()) {
-                        materialDto.setDescription(specimenDec.get(0));
+                        materialDto.setDescription(specimenDec.getFirst());
                     }
                     if(hl7SPMType.getSpecimenSourceSite()!=null){
                         observationDto.setTargetSiteCd(hl7SPMType.getSpecimenSourceSite().getHL7Identifier());
@@ -102,18 +81,18 @@ public class HL7SpecimenUtil {
                             && hl7SPMType.getSpecimenID().getHL7FillerAssignedIdentifier().getHL7EntityIdentifier() != null) {
                         String specimenID = hl7SPMType.getSpecimenID().getHL7FillerAssignedIdentifier().getHL7EntityIdentifier();
                         ArrayList<EntityIdDto> entityIdArrList = new ArrayList<>(materialContainer.getTheEntityIdDtoCollection());
-                        entityIdArrList.get(0).setRootExtensionTxt(specimenID);
+                        entityIdArrList.getFirst().setRootExtensionTxt(specimenID);
                         if (hl7SPMType.getSpecimenID().getHL7FillerAssignedIdentifier().getHL7UniversalID() != null) {
-                            entityIdArrList.get(0).setAssigningAuthorityCd(hl7SPMType.getSpecimenID()
+                            entityIdArrList.getFirst().setAssigningAuthorityCd(hl7SPMType.getSpecimenID()
                                     .getHL7FillerAssignedIdentifier().getHL7UniversalID());
                         }
                         if (hl7SPMType.getSpecimenID().getHL7FillerAssignedIdentifier().getHL7NamespaceID() != null) {
-                            entityIdArrList.get(0).setAssigningAuthorityDescTxt(hl7SPMType.getSpecimenID()
+                            entityIdArrList.getFirst().setAssigningAuthorityDescTxt(hl7SPMType.getSpecimenID()
                                     .getHL7FillerAssignedIdentifier().getHL7NamespaceID());
                         }
                         if (hl7SPMType.getSpecimenID().getHL7FillerAssignedIdentifier()
                                 .getHL7UniversalIDType() != null) {
-                            entityIdArrList.get(0).setAssigningAuthorityIdType(hl7SPMType.getSpecimenID()
+                            entityIdArrList.getFirst().setAssigningAuthorityIdType(hl7SPMType.getSpecimenID()
                                     .getHL7FillerAssignedIdentifier().getHL7UniversalIDType());
                         }
 
@@ -123,8 +102,7 @@ public class HL7SpecimenUtil {
                 }
             }
         } catch (Exception e) {
-            logger.error("HL7SpecimenProcessor.process251Specimen error thrown {}", e.getMessage());
-            throw new DataProcessingException( "HL7SpecimenProcessor.process251Specimen error thrown "+ e.getMessage() + e);
+            throw new DataProcessingException(e.getMessage() + e);
         }
     }
 
@@ -199,8 +177,7 @@ public class HL7SpecimenUtil {
             labResultProxyContainer.getTheParticipationDtoCollection().add(participationDto);
             labResultProxyContainer.getTheMaterialContainerCollection().add(materialContainer);
         } catch (Exception e) {
-            logger.error("HL7SpecimenProcessor.processSpecimen error thrown {}", e.getMessage());
-            throw new DataProcessingException("HL7SpecimenProcessor.processSpecimen error thrown "+ e);
+            throw new DataProcessingException(e.getMessage(), e);
         }
 
     }
